[package]
name = "argfetch"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["arguments", "flags", "args", "parser", "cli"]
categories = ["command-line-interface"]
repository = "https://github.com/cupboardmanufacturer/argfetch"
description = "a simple command line argument parser"


[dependencies]
